--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/diasgc/x-builder/issues"
   },
-  "homepage": "https://github.com/diasgc/x-builder#readme"
+  "homepage": "https://github.com/diasgc/x-builder#readme",
+  "publishConfig": {
+    "@YOUR-USERNAME:registry": "https://npm.pkg.github.com"
+  }
 }
